--- a/fund-web/lab-diagramacao2/css/main.css
+++ b/fund-web/lab-diagramacao2/css/main.css
@@ -1,3 +1,10 @@
+:root{
+    --main-bottom-background: rgb(243, 243, 242);
+    --main-button: rgb(233, 92, 60);
+    --date-color: rgb(189, 189, 189);
+    --border-color: rgb(90, 90, 90);
+}
+
 *{
     box-sizing: border-box;
     font-family:Arial, Helvetica, sans-serif;
@@ -7,7 +14,7 @@ figure{
     margin: 0;
 }
 
-header h1, header p, header a, header li{
+header h1, header p, header a, header li, main h2, main h4, article h3{
     text-transform: uppercase;
     text-decoration: none;
     list-style: none;
@@ -26,6 +33,7 @@ header img{
 header h1{
     position: absolute;
     color: white;
+    font-size: 2.8rem;
 }
 
 header p{
@@ -43,6 +51,45 @@ header a{
     color: rgb(184, 183, 183);
 }
 
+header a:hover{
+    border-style: solid;
+    border-radius: 20px;
+    border-color: white;
+    color: white;
+}
+
+main a{
+    color: black;
+}
+
+main h2, main h4, .gray{
+    color: var(--border-color);
+}
+
+main h2, main h4{
+    margin: 0px;
+}
+
+main h2{
+    font-size: 1.9rem;
+}
+
+.main-top-right article{
+    border-top-style: solid;
+    border-width: 1px;
+    border-color: var(--date-color);
+}
+
+article h3{
+    display: inline-block;
+    color: var(--border-color);
+    font-size: 1rem;
+}
+
+article p{
+    color:var(--date-color)
+}
+
 .main-top{
     display: flex;
 }
@@ -55,7 +102,7 @@ header a{
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    background-color:azure;
+    background-color: var(--main-bottom-background);
 }
 
 .main-bottom article a{
@@ -65,17 +112,41 @@ header a{
     text-decoration: none;
     text-transform: uppercase;
     color: white;
-    background-color: orange;
+    background-color: var(--main-button);
 }
 
 footer{
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    background-color: black;
+    margin: 0;
 }
 
-footer ul, footer li{
+footer span{
+    text-transform: uppercase;
+    font-size: 1.1rem;
+}
+
+footer ul, footer li, footer ol{
     list-style: none;
+    color: white;
+    padding: 0px;
+}
+
+footer ol li{
+    border-top-style: solid;
+    border-width: 1px;
+    border-color: var(--border-color);
+}
+
+footer ol li:first-child{
+    border:none;
+}
+
+footer a{
+    color: var(--border-color);
+    text-decoration: none;
 }
 
 /*
@@ -88,7 +159,6 @@ resolução de desktop
     }
 
     header{
-        margin: 0px;
         height: 400px;
         margin:  auto;
     }
@@ -99,7 +169,6 @@ resolução de desktop
     }
 
     header h1{
-        font-size: 2.6rem;
         top: 20%;
     }
     
@@ -119,26 +188,9 @@ resolução de desktop
         padding: 10px;
     }
 
-    header a:hover{
-        border-style: solid;
-        border-radius: 20px;
-        border-color: white;
-        color: white;
-    }
-    
-    
-    main{
-        width: 100%;
-        margin: 20px auto;
-    }
-
-    main h2, main h4{
-        margin: 0px;
-    }
-
     .main-top{
-        width: 95%;
         margin: auto;
+        padding: 2.5%;
     }
 
     .main-top-left{
@@ -155,9 +207,8 @@ resolução de desktop
     }
 
     .main-top-right article{
-        margin-bottom: 5%;
-        border-top-style: solid;
-        border-width: 1px;
+        padding: 10px 0px;
+        margin: 10px 0px;
     }
 
     .main-top-right article:first-of-type{
@@ -169,7 +220,8 @@ resolução de desktop
     }
 
     .main-bottom{
-        padding: 0% 2.5% 0% 2.5%;
+        height: 450px;
+        padding: 1% 2.5% 0% 2.5%;
     }
 
     .main-bottom article{
@@ -185,21 +237,18 @@ resolução de desktop
     }
 
     footer{
-        width: 100%;
-        padding-top: 30px;
-        background-color: black;
+        padding: 1% 2.5%;
     }
 
-    footer li{
-        color: white;
+    footer ul{
+        width: 29%;
     }
 
     footer ol{
         margin-top: 20px;
-        padding: 0px;
     }
 
     footer ol li{
-        margin-bottom: 10px;
+        padding: 10px 0px;
     }
 }
