--- a/fund-web/lab-estruturacao-css/css/base/typography.css
+++ b/fund-web/lab-estruturacao-css/css/base/typography.css
@@ -2,6 +2,15 @@
     header h1 {
         font-size:3em;
     }
+
+    .news h3, .products h3{
+        font-size: 1.6em;
+        font-weight: lighter;
+    }
+
+    .products h2{
+        font-size: 1.5em;
+    }
 }
 
 @media (min-width:1000px){
