--- a/fund-web/lab-estruturacao-css/css/main.css
+++ b/fund-web/lab-estruturacao-css/css/main.css
@@ -40,6 +40,22 @@ header {
         display: none;
     }
 
+    #nav-mobile{
+        position: absolute;
+        left: 300px;
+        top: 40px;
+    }
+
+    #nav-mobile ul{
+        display: flex;
+        flex-direction: row;
+        background-color: black;
+    }
+
+    #nav-mobile ul li{
+        margin: 5px;
+    }
+
     header{
         height: 250px;
     }
@@ -73,6 +89,22 @@ header {
         display: none;
     }
 
+    #nav-mobile{
+        position: absolute;
+        right: 70px;
+        top: 30px;
+    }
+
+    #nav-mobile ul{
+        display: flex;
+        flex-direction: column;
+        background-color: black;
+    }
+
+    #nav-mobile ul li{
+        margin: 5px;
+    }
+
     header{
         height: 250px;
     }
@@ -94,7 +126,7 @@ header {
 
 @media (min-width:1000px) {
 
-    #nav-cel{
+    #nav-mobile{
         display: none;
     }
 
