--- a/fund-web/catalogo_filmes/css/style.css
+++ b/fund-web/catalogo_filmes/css/style.css
@@ -32,7 +32,7 @@ h1{
     background-color: white;
     display: flex;
     flex-direction: column;
-    margin: 30px 10px;
+    margin: 30px 0px 10px 0px;
     padding: 0px 3px 10px 10px;
 }
 
@@ -56,7 +56,7 @@ h1{
 
 .classificacao-idade{
     padding: 12px;
-    margin: 0px 0px 10px 0px;
+    margin: 0px 0px 10px 15px;
     text-align: center;
 }
 
@@ -104,7 +104,7 @@ h1{
 }
 
 .similares-img{
-    width: 80px;
+    width: 120px;
 }
 
 .avaliacoes-titulo{
@@ -112,6 +112,29 @@ h1{
     font-size: 1.1rem;
 }
 
-.estrelas{
+.estrelas, .comentarios i{
     color: rgb(255, 187, 28);
+}
+
+.comentarios{
+    display: flex;
+    border-bottom: 1px solid gray;
+}
+
+.comentarios:last-child{
+    border: none;
+}
+
+.comentarios blockquote{
+    margin: 16px 0px 10px 15px;
+    width: 300px;
+}
+
+.comentarios i{
+    margin-top: 16px;
+    font-size: 0.8rem;
+}
+
+.comentarios i:first-of-type{
+    margin-left: 30px;
 }
